# DeployCamp_Car-Price-Prediction

./: .env.example  .gitignore  Deploycamp_carpp (2).ipynb  Exploratory Data Analysis.ipynb  main.py  mlflow_model_tuning.py  model.ipynb  model_rfr_tuning.pkl  pyproject.toml  requirements.txt
app/: main.py
mlruns/0/: meta.yaml
mlruns/612203894510966219/: meta.yaml
mlruns/612203894510966219/04cf76aa501e402baa353e1445f3855a/: meta.yaml
mlruns/612203894510966219/04cf76aa501e402baa353e1445f3855a/metrics/: mae  r2  rmse
mlruns/612203894510966219/23c6b8b365f043a7bb34350b419caf35/: meta.yaml
mlruns/769404352753041386/: meta.yaml
mlruns/769404352753041386/00e3cc7a9d094199ac499ce2e6697b29/: meta.yaml
mlruns/769404352753041386/149d0b48ffa14cc28451e4cebe7e515b/: meta.yaml
mlruns/769404352753041386/2e815bdb3fb34779b1c0b2f021df72b2/: meta.yaml
mlruns/769404352753041386/58f8f8842b6945e2bf45735755fe78bf/: meta.yaml
mlruns/769404352753041386/67ab01387af14170a1f78e2b7950da3d/: meta.yaml
mlruns/769404352753041386/6f01c71428d7427bbf3bcdc8dc7e86e7/: meta.yaml
mlruns/769404352753041386/96001c37df2e498c85a3a5ab7748d79c/: meta.yaml
mlruns/769404352753041386/c66e71b61c0748caa840588d4de457f2/: meta.yaml
mlruns/769404352753041386/d42911c170734628925e3dc9b51ab5c2/: meta.yaml
mlruns/769404352753041386/d96f1bcd5714490a91d4dfc1fc89ede9/: meta.yaml
mlruns/769404352753041386/f0c8ea24d7a044ef9b79522b90a9a2c1/: meta.yaml
mlruns/769404352753041386/f73e83b5c7f545a2aea35141219404b8/: meta.yaml
mlruns/models/CarPriceModel/: meta.yaml
(+22 files in other folders)
